--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mcgingras/chairmonster#readme",
   "dependencies": {
     "base64-img": "^1.0.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "pyfi": "^1.0.8"
   }
 }
